--- a/SQLiteExampleApp/app/src/main/res/layout/activity_main.xml
+++ b/SQLiteExampleApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
+    tools:context=".sqlite.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <LinearLayout
