--- a/SQLiteExampleApp/app/src/main/res/layout/activity_media_player.xml
+++ b/SQLiteExampleApp/app/src/main/res/layout/activity_media_player.xml
@@ -44,8 +44,8 @@
         android:id="@+id/button5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
         android:onClick="broadcast"
+        android:text="Send Broadcast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
